[project]
name = "ha-edifier-es300"
version = "0.1.4"
description = "Home Assistant custom integration for the Edifier ES300 speaker (local Wi-Fi control)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "edifier-es300==1.0.3",
]

[dependency-groups]
dev = [
    "homeassistant>=2024.12.0",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ty.environment]
python-version = "3.13"
